# model-train-control-system

./: .actrc  .dockerignore  .gitignore  .markdown-link-check.json  .markdownlint.yaml  .pre-commit-config.yaml  DEPENDENCY_UPDATE_PLAN.md  LICENSE  LOCAL_DEV.md  Makefile  Model Train Control System API 0.1.0-wrk_8d50ef17b2464ceca69ec80fb936efc1.yaml  Model Train Layout API 0.1.0-wrk_cb46f29722874d8fae913ad6a051060c.yaml  README.md  SECURITY.md  config.test.yaml  config.yaml  copilot-test.txt  openapi.json  openapi.yaml  package.json
.devcontainer/: Dockerfile  devcontainer.json
.github/: PROJECT_SETUP.md  copilot-instructions.md  dependabot.yml
.github/workflows/: build-images.yml.local  ci-central-api.yml  ci-central-api.yml.disabled  ci-docs.yml  ci-security.yml  ci-security.yml.disabled  ci.yml  pre-commit-ci.yml.disabled
TODOs/: E2E-failures.md
central-api/: Dockerfile  README.md  requirements.txt
central-api/app/: main.py
central-api/app/models/: schemas.py
central-api/app/routers/: trains.py
central-api/app/services/: mqtt_adapter.py
central_api/: Dockerfile  Makefile  README.md  fix_dependency_injection.py  pyproject.toml  requirements.txt
central_api/app/: __init__.py  config.py  main.py
central_api/app/models/: __init__.py  schemas.py
central_api/app/routers/: __init__.py  config.py  trains.py
central_api/app/services/: config_loader.py  config_manager.py  config_repository.py  config_schema.sql  mqtt_adapter.py  mqtt_status_service.py
central_api/docs/: AI_SPECS.md  ARCHITECTURE.md
central_api/migrations/: 001_add_controller_telemetry.sql  run_migrations.py
central_api/tests/: conftest.py
central_api/tests/e2e/: __init__.py  test_api_lifecycle.py
central_api/tests/integration/: test_config_integration.py  test_heartbeat_flow.py  test_train_update_api.py
central_api/tests/unit/: test_config_loader.py  test_config_manager.py  test_config_repository.py  test_config_router.py  test_schemas.py
docs/: 2025-11-24-end-of-day-status.md  2025-11-25-end-of-day-status.md  DEPLOYMENT_READY.md  DEPLOYMENT_SUMMARY.md  LOCAL_DEV.md  MULTI_MOTOR_DEPLOYMENT.md  PROJECT_OVERVIEW.md  architecture.md  deployment-decisions.md  deployment-research.md  deployment-runbook.md  local-github-actions.md  mqtt-topics.md  onboarding.md  openapi-refactor-plan.md
docs/TODO/: 2025-12-04-consolidated-todo.md  TRAIN_CONFIG_IMPLEMENTATION_PLAN.md  TRAIN_CONFIG_TODAY.md  WEB_UI_TESTING_STRATEGY.md  controller-registration-improvements.md
docs/decisions/: ADR-001-deployment-automation.md  ADR-002-i2c-motor-control.md  ADR-003-multi-motor-containers.md
docs/guides/: local-development.md
docs/refactor-issues/: 01-integrate-real-train-status.md  02-integrate-real-train-command.md  03-ensure-db-backed-config-endpoints.md  04-verify-mqtt-topic-and-schema-alignment.md  05-update-tests-for-integration.md
edge-controllers/: TESTING.md  dev_up.sh
edge-controllers/docs/: AI_SPECS.md  ARCHITECTURE.md  VALIDATION_REPORT.md
edge-controllers/examples/: pi-config.yaml
edge-controllers/pi-template/: .dockerignore  .pre-commit-config.yaml  Dockerfile  Dockerfile-local  Dockerfile.dev  Makefile  README.md  edge-controller.conf  pi-config.yaml  pyproject.toml  requirements-pi.txt  requirements.txt
edge-controllers/pi-template/.github/workflows/: test.yml
edge-controllers/pi-template/app/: context.py  controllers.py  dc_motor_hat.py  hardware.py  main.py  mqtt_client.py  stepper_hat.py
edge-controllers/pi-template/app/api/: __init__.py  client.py
edge-controllers/pi-template/app/config/: __init__.py  loader.py  manager.py
edge-controllers/pi-template/scripts/: dev.sh  pre-commit.sh
edge-controllers/pi-template/tests/: __init__.py  conftest.py
edge-controllers/pi-template/tests/e2e/: __init__.py  test_controller_lifecycle.py
edge-controllers/pi-template/tests/integration/: __init__.py  test_config_flow.py  test_heartbeat_e2e.py
edge-controllers/pi-template/tests/unit/: __init__.py  test_api_client.py  test_config_loader.py  test_main.py  test_mqtt_client.py
frontend/web/: .dockerignore  .env.example  ARCHITECTURE.md  Dockerfile.dev  README.md  SETUP.md  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/web/src/: App.tsx  queryClient.ts  router.tsx  vite-env.d.ts
frontend/web/src/api/: client.ts  queries.ts  types.ts
frontend/web/src/components/: Dashboard.tsx
frontend/web/src/hooks/: useTheme.ts
frontend/web/src/pages/: Configuration.tsx  ControllerDetail.tsx  Controllers.tsx  Dashboard.tsx  NotFound.tsx  TrainDetail.tsx
frontend/web/src/services/: mqtt.ts
frontend/web/src/styles/: globals.css
frontend/web/src/utils/: cn.ts  constants.ts  controllerStatus.ts  formatting.ts
frontend/web/tests/: setup.ts
frontend/web/tests/components/: AssignedTrainsTable.test.tsx  ControllerCard.test.tsx  ControllerGrid.test.tsx  (+2 more)
gateway/orchestrator/: app.js  package-lock.json  package.json
gateway/orchestrator/controllers/: commands.js
gateway/orchestrator/mqtt/: mqttClient.js
infra/: edge-controller.conf.j2
infra/ansible/: README.md  ansible.cfg
infra/ansible/playbooks/: deploy_central.yml  deploy_edge.yml  deploy_edge_multi_motor.yml  deploy_edge_test.yml  full_deploy.yml  provision_pi.yml  rollback.yml  update.yml
infra/ansible/secrets/: .gitignore  README.md  vault.yml.example  vault_plain.yml
infra/docker/: docker-compose.e2e.yaml  docker-compose.yml
infra/docker/mosquitto/: mosquitto.conf
infra/k8s/manifests/: central-api-deployment.yaml  pi-controller-deployment.yaml
infra/terraform/: main.tf
persistence/influxdb/: init-influxdb.sh
persistence/timescaledb/: init-timescaledb.sql
scripts/: bootstrap_trains.py  check_and_run_compose.sh  deploy.sh  dev_up.sh  provision_pi.sh  tear-down.sh  test_api_endpoints.sh  test_config_bootstrap.py
tests/integration/: test_config_integration.py  test_edge_controller.py  test_end_to_end.py
tests/unit/: test_config_models.py  test_mqtt_adapter.py  test_train_status.py
(+42 files in other folders)
