[project]
name = "edge-controller"
version = "0.1.0"
description = "Edge controller for model train control system"
requires-python = ">=3.9"
dependencies = [
    "paho-mqtt==1.6.1",
    "requests==2.31.0",
    "pyyaml==6.0.1",
    "gpiozero==2.0.1",
    "lgpio==0.2.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.4.2",
    "pytest-cov==7.0.0",
    "pytest-asyncio==0.23.6",
    "pytest-mock==3.14.0",
    "ruff==0.3.4",
    "mypy==1.18.2",
    "bandit==1.7.8",
    "safety==3.1.0",
    "types-requests==2.32.4.20250913",
    "types-pyyaml==6.0.12.20240311",
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

# ============================================================================
# RUFF CONFIGURATION (Linting + Formatting)
# ============================================================================
[tool.ruff]
line-length = 100
target-version = "py39"
src = ["app", "tests"]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "C90",   # mccabe complexity
    "N",     # pep8-naming
    "D",     # pydocstyle
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "A",     # flake8-builtins
    "C4",    # flake8-comprehensions
    "DTZ",   # flake8-datetimez
    "T10",   # flake8-debugger
    "ISC",   # flake8-implicit-str-concat
    "ICN",   # flake8-import-conventions
    "PIE",   # flake8-pie
    "PT",    # flake8-pytest-style
    "Q",     # flake8-quotes
    "RSE",   # flake8-raise
    "RET",   # flake8-return
    "SIM",   # flake8-simplify
    "TID",   # flake8-tidy-imports
    "ARG",   # flake8-unused-arguments
    "PTH",   # flake8-use-pathlib
    "ERA",   # eradicate (commented-out code)
    "PL",    # pylint
    "TRY",   # tryceratops
    "FLY",   # flynt
    "PERF",  # perflint
    "RUF",   # ruff-specific rules
    "S",     # flake8-bandit (security)
]

ignore = [
    "D100",   # Missing docstring in public module
    "D104",   # Missing docstring in public package
    "D203",   # 1 blank line required before class docstring (conflicts with D211)
    "D213",   # Multi-line docstring summary should start at the second line (conflicts with D212)
    "E501",   # Line too long (handled by formatter)
    "B008",   # Do not perform function calls in argument defaults
    "C901",   # Too complex
    "PLR0913", # Too many arguments
    "TRY003",  # Avoid specifying long messages outside the exception class
    "S101",   # Use of assert (allowed in tests)
]

# Maximum cyclomatic complexity
mccabe.max-complexity = 10

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "D104"]
"tests/**/*.py" = [
    "D100", "D101", "D102", "D103",  # Missing docstrings
    "ARG001",  # Unused function argument
    "S101",    # Use of assert
    "S105",    # Possible hardcoded password
    "S106",    # Possible hardcoded password argument
    "PLR2004", # Magic value used in comparison
]
"mqtt_client.py" = ["ARG002"]  # MQTT callbacks have required signatures
"app/context.py" = ["S108"]    # Probable insecure usage of temp file/directory

[tool.ruff.lint.isort]
known-first-party = ["app", "config", "api", "mqtt", "hardware"]
known-third-party = ["fastapi", "pydantic", "paho", "requests", "gpiozero", "yaml", "pytest"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
lines-after-imports = 2

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = 88

# ============================================================================
# MYPY CONFIGURATION (Type Checking)
# ============================================================================
[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_calls = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true
show_error_context = true
pretty = true
follow_imports = "normal"
ignore_missing_imports = false

# Per-module options
[[tool.mypy.overrides]]
module = ["gpiozero.*", "lgpio.*", "paho.*"]
ignore_missing_imports = true

# ============================================================================
# PYTEST CONFIGURATION
# ============================================================================
[tool.pytest.ini_options]
minversion = "6.0"
addopts = [
    "-ra",
    "-q",
    "--strict-markers",
    "--strict-config",
    "--cov=app",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=html",
    "--cov-report=xml",
    "--cov-fail-under=80",
]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "unit: Unit tests (fast, no external dependencies)",
    "integration: Integration tests (may require external services)",
    "e2e: End-to-end tests (full system simulation)",
    "slow: Slow tests",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["app"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/site-packages/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "@abc.abstractmethod",
]

# ============================================================================
# BANDIT CONFIGURATION (Security Linting)
# ============================================================================
[tool.bandit]
# Exclude test directories from security scanning
exclude_dirs = [
    "tests",
    ".venv",
    "venv",
    ".git",
    "__pycache__",
    "node_modules",
]

# Tests to skip (with justification)
skips = [
    # B101: assert_used - We allow asserts in production for critical safety checks
    # on hardware control (emergency stops, voltage limits, etc.)
    # However, we enforce proper error handling alongside asserts.
]

# Severity levels to report
severity = ["high", "medium"]

# Confidence levels to report
confidence = ["high", "medium"]

# ============================================================================
# SAFETY CONFIGURATION (Dependency Vulnerability Scanning)
# ============================================================================
[tool.safety]
# Ignore specific vulnerabilities (with justification)
ignore-vulnerabilities = []

# Scan all dependencies including development
full-report = true
